# 6_wyszukiwanie_binarne

./: CMakeLists.txt  README.md  binarne.cpp  main.cpp
src/: bin.cpp  bin.h
tests/: ts1.cpp
